# study-project

./: .gitignore  01_meeting.md  AGENTS.md  LICENSE  PROJECT.md  README.md
docs/: 02_meeting.md  SOT.md  architecture.md  interfaces.md  responsibilities.md  scaffolding-summary.md  setup.md  todo.md
ros2_ws/src/gesture_robot/: AGENTS.md  package.xml  setup.cfg  setup.py
ros2_ws/src/gesture_robot/config/: params.yaml
ros2_ws/src/gesture_robot/gesture_robot/: __init__.py  test_publisher.py  test_subscriber.py
ros2_ws/src/gesture_robot/gesture_robot/adapters/: __init__.py  mediapipe_detector.py  opencv_camera.py  turtlesim_adapter.py
ros2_ws/src/gesture_robot/gesture_robot/core/: __init__.py  color_tracker.py  gesture_classifier.py  models.py  tracking_controller.py  tracking_state.py
ros2_ws/src/gesture_robot/gesture_robot/nodes/: __init__.py  controller_node.py  gesture_node.py  object_tracking_node.py  simulation_node.py
ros2_ws/src/gesture_robot/gesture_robot/ui/: __init__.py  main_ui.py
ros2_ws/src/gesture_robot/gesture_robot/visualization/: __init__.py  tracking_visualizer.py
ros2_ws/src/gesture_robot/launch/: gesture_robot.launch.py
ros2_ws/src/gesture_robot/test/: test_color_tracker.py
ros2_ws/src/gesture_robot_interfaces/: AGENTS.md  CMakeLists.txt  package.xml
ros2_ws/src/gesture_robot_interfaces/msg/: GestureCommand.msg  TrackedObject.msg
ros2_ws/src/sim_bringup/: CMakeLists.txt  package.xml
