<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gesture_robot</name>
  <version>0.1.0</version>
  <description>Python nodes for the gesture-controlled tracking robot.</description>
  <maintainer email="team@example.com">gesture_robot team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>gesture_robot_interfaces</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <!-- TODO: 메시지와 외부 라이브러리 사용이 확정되면 의존성을 추가한다. -->
  <exec_depend>mediapipe</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
