<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_bringup</name>
  <version>0.1.0</version>
  <description>Launch package for the gesture robot simulation.</description>
  <maintainer email="team@example.com">gesture_robot team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- TODO: launch 구현 후 ros2launch, turtlesim, gesture_robot 의존성을 추가한다. -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
